Add reading without DDI (lunatic only)